--- a/Hive2.0/Views/Login/SignUp.cshtml
+++ b/Hive2.0/Views/Login/SignUp.cshtml
@@ -1,17 +1,16 @@
 ﻿@model Hive2._0.Models.User
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "SignUp";
 }
 
-<h2>Index</h2>
+<h2>SignUp</h2>
 
 
-
-    @using (Html.BeginForm("Autherize", "Login", FormMethod.Post))
-    {
+@using (Html.BeginForm()) 
+{
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>User</h4>
         <hr />
@@ -34,7 +33,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Login"  class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
